--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "755a046d-d9f8-40be-9faa-aac5399fd42a"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
